public/css/application.css
#streak {
}

.streak {
  width: 30px;
  height: 30px;
  border: 3px solid black;
  display: inline-block;
  position: relative;
}

.glyphicon {
  font-size: 18px;
  color: green;
  position: absolute;
  margin: auto;
}

.container {
  margin: 20px auto;
  width: 800px;
  padding: 0px 20px 20px 20px;
  border: 1px dotted black;
}

.container h1 {
  font-size: 17pt;

}

.timestamp {
  color: green;
  font-size: 20px;
  font-weight: bold;
  padding-bottom: 10px;
}

nav {
  width: 100%;
  height: 40px;
  font-weight: bold;
}

nav .brand, nav .brand a {
  margin-left: 25px;
  font-size: 18pt;
  text-decoration: none;
  color: #444;
  width: 60%;
  display: inline-block;
}

nav ul {
  display: inline-block;
  width: 30%;
  text-align: right;
}

nav li {
  margin-right: 25px;
  display: inline;
}

nav li a {
  color: gray;
  text-decoration: none;
}

nav li a:hover {
  text-decoration: underline;
}

form label {
  font-weight: bold;
  margin-right: 20px;
}

input {
  margin-bottom: 10px;
}

.errors {
  color: red;
}

form.quirks {
  display: inline-block;
}

.submit {
  text-align: center;
}

.label {
  font-weight: bold;
  float: left;
  text-align: right;
  margin-right: 20px;
  width: 200px;
}

#sign-out input {
  border:none;
  background:none;
  font-weight: :bold;
}

